--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: This package focuses on writing scientific manuscripts using
              configuration function for version control of files in `.docx` 
              using the pre- and post-commit scripts.
 License: MIT + file LICENSE
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
 Imports: 
     usethis,
     git2r,
@@ -33,6 +33,7 @@ Imports:
     yaml,
     Rcpp,
     htmltools,
+    htmlwidgets,
     caTools,
     bitops,
     jsonlite,
