--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,7 @@
-pandoc: 2.3.1
-pkgdown: 1.4.1
+pandoc: 2.9.1.1
+pkgdown: 1.5.0
 pkgdown_sha: ~
-articles: []
+articles:
+  how-to-use: how-to-use.html
+last_built: 2020-04-03T20:29Z
 
