--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -5,7 +5,11 @@
 ^pkgdown$
 inst/template/full/.atom
 inst/template/full/.github
+inst/template/full/.session.vim
+inst/template/full/.tmuxinator.yml
 ^vignettes/how-to-use\.Rmd$
 README.Rmd
 README.html
 Makefile
+tags
+.session.vim
