--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
 pandoc: 2.9.2.1
 pkgdown: 1.5.1
 pkgdown_sha: ~
-articles: []
-last_built: 2020-04-19T22:22Z
+articles:
+  how-to-use: how-to-use.html
+last_built: 2020-05-12T20:59Z
 
