update ctags list

--- a/inst/template/full/.ctagsignore
+++ b/inst/template/full/.ctagsignore
@@ -1,21 +1,24 @@
+*-Ex.R
+*.knit.md
+*.utf8.md
+*.bib
+*/*.bib
+*/*/*.bib
+*_cache/
 .git
-tags
-.session.vim
-.Rhistory
+.httr-oauth
 .Rapp.history
 .RData
-.Ruserdata
-*-Ex.R
-/*.tar.gz
-/*.Rcheck/
-.Rproj.user/
-vignettes/*.html
-vignettes/*.pdf
-.httr-oauth
-*_cache/
-/cache/
-*.utf8.md
-*.knit.md
 .Renviron
+.Rhistory
+.Rproj.user/
+.Ruserdata
+.session.vim
 .session.vim
 .tmuxinator.yml
+/*.Rcheck/
+/*.tar.gz
+/cache/
+tags
+vignettes/*.html
+vignettes/*.pdf
