deploy docs via travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ deploy:
   keep_history: true
   on:
     branch: master
+  local_dir: docs
 
 after_success:
   - Rscript -e "devtools::install()"
