--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install: |
 
 cache: packages
 
-script: make check
+script: make all
 
 matrix:
   include:
@@ -35,5 +35,6 @@ deploy:
 
 after_success:
   - Rscript -e "devtools::install()"
-  - Rscript -e "pkgdown::build_site()"
+  - Rscript -e "pkgdown::build_home(preview = FALSE)"
+  - Rscript -e "pkgdown::build_site(preview = FALSE)"
 
