render home based on README.Rmd "always change because tempdir()"

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ language: r
 r_packages:
   - devtools
   - pkgdown
+  - remotes
+
+r_github_packages:
+  - kguidonimartins/minimalTemplate
 
 sudo: false
 
