--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(rcrossref,get_styles)
 importFrom(readr,write_csv)
+importFrom(usethis,create_project)
 importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
