--- a/inst/template/full/DESCRIPTION
+++ b/inst/template/full/DESCRIPTION
@@ -1,15 +1,13 @@
-Package: MyPackages
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Package: placeholder
+Title: Do not matter
+Version: 0.0.1
 Authors@R:
     person(given = "First",
            family = "Last",
            role = c("aut", "cre"),
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: CC BY 4.0
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
