--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,15 @@ export(setup_wdiff)
 importFrom(docxtractr,docx_extract_all_cmnts)
 importFrom(docxtractr,read_docx)
 importFrom(dplyr,select)
+importFrom(fs,dir_exists)
 importFrom(glue,glue)
+importFrom(here,here)
 importFrom(magrittr,"%>%")
-importFrom(rcrossref,get_styles)
 importFrom(readr,write_csv)
 importFrom(usethis,create_project)
+importFrom(usethis,ui_done)
+importFrom(usethis,ui_field)
+importFrom(usethis,ui_todo)
 importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
