--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ r_packages:
   - devtools
   - pkgdown
   - remotes
+  - rmarkdown
 
 r_github_packages:
   - kguidonimartins/minimalTemplate
@@ -22,7 +23,7 @@ before_install: |
 
 cache: packages
 
-script: make check
+script: make all
 
 matrix:
   include:
@@ -39,6 +40,6 @@ deploy:
 
 after_success:
   - Rscript -e "devtools::install()"
-  - Rscript -e "pkgdown::build_home(preview = FALSE)"
   - Rscript -e "pkgdown::build_site(preview = FALSE)"
+  - Rscript -e "minimalTemplate::setup_template('ma-teste'); rmarkdown::render('ma-teste/main-script.Rmd')"
 
