--- a/inst/template/full/.travis.yml
+++ b/inst/template/full/.travis.yml
@@ -1,3 +1,8 @@
+# Change the word USER by your DockerHub username
+env:
+  global:
+  - DOCKERHUB_USERNAME=USER
+
 os: linux
 dist: xenial
 
@@ -10,6 +15,8 @@ script:
   - make docker_build
 
 after_success:
-  - docker login -u {{{USER}}} -p "$DOCKER_PASSWORD"
-  - export REPO={{{USER}}}/{{{REPO}}}
-  - if [ $TRAVIS_BRANCH == "main" ]; then docker push $REPO; fi
+  - |
+    if [ $TRAVIS_BRANCH == "master" ]; then \
+        docker login --username $DOCKERHUB_USERNAME --password "$DOCKERHUB_PASSWORD"; \
+        make docker_push; \
+    fi
