--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(readr,write_csv)
 importFrom(usethis,create_project)
 importFrom(usethis,ui_done)
 importFrom(usethis,ui_field)
+importFrom(usethis,ui_info)
 importFrom(usethis,ui_todo)
 importFrom(utils,download.file)
 importFrom(utils,install.packages)
