--- a/inst/template/full/.gitignore
+++ b/inst/template/full/.gitignore
@@ -31,6 +31,10 @@ vignettes/*.pdf
 *_cache/
 /cache/
 
+# knitr and R markdown default files directories
+*_files/
+/files/
+
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
