update: more concise workflow based on Makefile

--- a/inst/template/full/DESCRIPTION
+++ b/inst/template/full/DESCRIPTION
@@ -23,6 +23,27 @@ Imports:
     broom,
     usethis,
     here,
-    magrittr
+    magrittr,
+    conflicted,
+    cowplot,
+    crayon,
+    dplyr,
+    forcats,
+    fs,
+    ggplot2,
+    ggsn,
+    glue,
+    grid,
+    gridExtra,
+    magick,
+    purrr,
+    RColorBrewer,
+    readr,
+    sf,
+    stringr,
+    tibble,
+    tidyr,
+    tiff,
+    vegan
 Depends:
     tidyverse
