--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 export(cite_pkg)
 export(download_csl)
-export(extract_comments)
+export(extract_comments_from_docx)
 export(ipak)
 export(setup_template)
 export(setup_wdiff)
@@ -10,9 +10,8 @@ importFrom(docxtractr,docx_extract_all_cmnts)
 importFrom(docxtractr,read_docx)
 importFrom(dplyr,select)
 importFrom(fs,dir_exists)
-importFrom(glue,glue)
+importFrom(fs,dir_ls)
 importFrom(here,here)
-importFrom(magrittr,"%>%")
 importFrom(readr,write_csv)
 importFrom(usethis,create_project)
 importFrom(usethis,ui_done)
