--- a/inst/template/full/Makefile
+++ b/inst/template/full/Makefile
@@ -73,3 +73,6 @@ help: ## show this message
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | \
 		awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-20s\033[0m %s\n", $$1, $$2}'
 	@echo "-------------------------------------------------------------------------"
+
+# @grep -E '^[A-Z]+.* .*$$' $(MAKEFILE_LIST) | \
+# 	awk 'BEGIN {FS = ":=.*"}; {printf "\033[36m%-20s\033[0m %s\n", $$1, $$1}'
